# abgrid

./: .gitignore  README.md  abgrid.py  abgrid_terminal.py  app_api.py  app_terminal.py  batch.py  batch_terminal.py  create_jwt.py  gunicorn.conf.py  package.json  pyproject.toml  requirements.txt  terminal_app.py  terminal_app_batch.py  update_python_packages.sh
data/demo/: demo_data.json  demo_gruppo_4.yaml
data/demo/demo/: demo.yaml  demo_data.json  demo_g1.yaml  demo_g2.yaml  demo_g3.yaml  demo_g4.yaml  demo_gruppo_1.yaml  demo_gruppo_2.yaml  demo_gruppo_3.yaml  demo_gruppo_4.yaml
data/demo/demo2/: demo2.yaml  demo2_data.json  demo2_g1.yaml
data/demo/demo3/: demo3.yaml  demo3_data.json
data/demo/demo3/reports/: demo3_report_demo3_g1.html
data/demo/demo_lor/: demo_lor_data.json  lord_of_the_rings_data.json  lord_of_the_rings_g1.yaml
data/demo/demo_lotr/: abgrid-report.html  abgrid-report.json  demo_lotr_data.json  lord_of_the_rings_g1.yaml
data/douhet/vega/: vega.yaml  vega_g1.yaml  vega_g1_subjects.yaml
ipython/: Untitled.ipynb  db.ipynb  eda.ipynb  extract_abgrid.ipynb  extract_accme.ipynb  extract_data.ipynb  extract_mmpia.ipynb  playground.ipynb
lib/: __init__.py  abgrid_data.py  abgrid_dispatcher.py  abgrid_emitter.py  abgrid_logger.py  abgrid_logger_print.py  abgrid_main.py  abgrid_network.py  abgrid_schemas.py  abgrid_sna.py  abgrid_sociogram.py  abgrid_utils.py  abgrid_yaml.py  abigrid_data.py  utils.py
lib/core/: __init__.py  core_data.py  core_export.py  core_schemas.py  core_schemas_errors.py  core_schemas_in.py  core_schemas_out.py  core_sna.py  core_sociogram.py  core_templates.py  core_utils.py
lib/core/templates/: _base.html  _base_answersheet.html  _base_report.html  _base_report_macro.html
lib/core/templates/.cache/: __jinja2_09f3da5c94455023e2eeaf755eddcdb3a55360b6.cache  __jinja2_0dc67d6bac0f1070f2e90b00a66be078f4e63429.cache  __jinja2_10ec231c232b802cd56e42f84e6b00c987dc5eae.cache  __jinja2_2e68fc2538f27b7efcc8d43049e9fa783a714433.cache  __jinja2_3f1be35e12a25ccce0b0e0ce6efca5f2ce5191cb.cache  __jinja2_42f0639dc37292a13191a29ad58ac2dc8f4eb9fa.cache  __jinja2_479cdc2b4e3bf6e66defb3aef696d58c2c82b747.cache  __jinja2_51ec6dfbb22ee3fec5427e57c870a6fd2c0156c8.cache  __jinja2_6729f038d5ea8f783de30feaf9dba547f569dfa2.cache  __jinja2_6fed65ba98fd66cdb09192cd477aba75ca3b3f7f.cache  __jinja2_7e29f2fef865ff5cd4d687ccad783e3610bf22c9.cache  __jinja2_82df0150792ca92db9f7ce5967f65ab4a3329957.cache  __jinja2_9414d59a1e47de27e31fbc1070934975456d88f7.cache  __jinja2_987c75df134350aa5f08a74e51e56cf6be6636f8.cache  __jinja2_9bd7ced12880336ea6c4c29f5383e18e6ed44055.cache  __jinja2_9c404d5c6ddb669a46be9d180bde1a6d92c3b822.cache  __jinja2_afa786425140a8d3f286973d1e50842fc202fd11.cache  __jinja2_cc4353c03f261c945e35b99e1eab983d87ae5dc7.cache  __jinja2_d7f437a12137f7715c5d48ecc7e06202a2a6c606.cache  __jinja2_ee362e21590e0315bf963f816921843bb766a142.cache
lib/core/templates/en/: answersheet.html  group.html  group.yaml  report_macro.html  subjects.html
lib/core/templates/it/: answersheet.html  group.html  group.yaml  report_macro.html  subjects.html
lib/interfaces/docker/: .dockerignore  Dockerfile  docker-compose.yml  gunicorn.conf.py  package.json
lib/interfaces/electron-thin/app/: main.js  preload.js
lib/interfaces/electron/app/: main.js  server.js
lib/interfaces/electron/full/: package-lock.json
lib/interfaces/electron/full/app/: main.js  package.json  preload.js  server.js
lib/interfaces/electron/thin/app/: main.js  preload.js  server.js
lib/interfaces/fastapi/: auth.py  auth_jwt.py  config.py  jwt.py  limiter.py  router.py  security.py  server.py  settings.py  utils.py
lib/interfaces/fastapi/middlewares/: body.py  compress.py  coors.py  cors.py  decompress.py  gzip.py  header.py  headers.py  query.py  request.py  timeout.py
lib/interfaces/fastapi/routers/: api_router.py  router_api.py  router_auth.py  router_fake.py
lib/interfaces/fastapi/security/: auth.py  blacklist.py  jwt.py  limiter.py
lib/interfaces/serverless/aws/: .dockerignore  Dockerfile  app.py  aws_lambda.py  deploy.sh  requirements.txt
lib/interfaces/terminal/: terminal_commands.py  terminal_errors.py  terminal_logger.py  terminal_main.py
lib/interfaces/web_client/: index.html  package-lock.json  package.json  vite.config.ts
lib/interfaces/web_client/pages/: about.html  it.about.html  it.generate.group.html  it.generate.report.html  it.notify.html  it.switcher.html
lib/interfaces/web_client/public/pages/: it.dropzone.html  it.generate.group.html  it.generate.html  it.generate.report.html  it.group.dropzone.html  it.group.generate.html  it.notify.html  it.report.html
lib/interfaces/web_client/src/css/: styles.css
lib/interfaces/web_client/src/js/: main.js
lib/interfaces/webapp/: index.html  package-lock.json  package.json  vite.config.ts
lib/interfaces/webapp/pages/: it.dropzone.data.html  it.dropzone.empty.html  it.dropzone.html  it.generate.html  it.group.html  it.multistep.data.html  it.multistep.json.html  it.multistep.report.html  it.multistep.sociogram.html  it.notify.error.api.html  it.notify.error.yaml.html  it.notify.html  it.notify.queue.html  it.notify.report.html
lib/interfaces/webapp/public/: robot.txt
lib/interfaces/webapp/src/js/: main.js
lib/templates/: _base.html  _base_answersheet.html  _base_macro.html  _base_report.html  _base_report_extended.html  _base_report_macro.html  _base_report_multi_page.html  _base_report_single_page.html  answersheet.html  group.html  project.yaml  report.html  subjects.html
lib/templates/en/: answersheet.html  group.html  project.yaml  report.html  report_macro.html  report_multi_page.html  report_single_page.html  subjects.html
lib/templates/it/: answersheet.html  group.html  project.yaml  report.html  report_macro.html  report_multi_page.html  report_single_page.html  subjects.html
lib/terminal/: terminal_logger.py  terminal_main.py  terminal_yaml.py
licenser/: license_main.py
terminal/: terminal_main.py
terminal_app/: terminal_main.py
warehouse/: abgrid.paw  pdf.js  yaml parser.js
(+69 files in other folders)
