[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abgrid"
version = "0.1.0"
description = "AB-Grid project for group management and reporting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.124.2",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "weasyprint>=67.0",
]

# Package discovery configuration to handle your folder structure
[tool.setuptools.packages.find]
include = ["lib*"]
exclude = ["data*", "licenser*"]

# Explicitly include your lib package
[tool.setuptools.package-data]
"lib" = ["**/*.py", "**/*.json", "**/*.yaml", "**/*.yml"]

# Ruff configuration
[tool.ruff]

# Python version target
target-version = "py313"

# Line length (matching Black's default)
line-length = 88

# File patterns to analyze - explicitly include root and lib
include = ["*.py", "lib/**/*.py"]

# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "*.egg-info",
    "./lib/interfaces/docker/**",
    "data",
    "licenser",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # Perflint
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D212",   # Multi-line docstring summary should start at the first line (conflicts with D213)
    "D415",    # First line should end with a period, question mark, or exclamation point
    "E501",   # Line too long (handled by formatter)
    "PLR0913", # Too many arguments to function call
    "TRY003", # Avoid specifying long messages outside the exception class
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore import violations in __init__ files
"__init__.py" = ["F401", "F403"]
"lib/**/__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["lib", "app_terminal", "app_api"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.mccabe]
# Maximum McCabe complexity
max-complexity = 10

[tool.ruff.lint.pylint]
# Maximum number of arguments for functions/methods
max-args = 7
# Maximum number of local variables
max-locals = 15

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Automatically detect the line ending
line-ending = "auto"

# MyPy configuration
[tool.mypy]

# Python version target
python_version = "3.13"

# Files to check - specify individual directories to avoid conflicts
files = ["lib"]

# Exclude patterns
exclude = [
    "^build/",
    "^dist/",
    "^\\.venv/",
    "^venv/",
    "^\\.git/",
    "^__pycache__/",
    "^data/",
    "^licenser/",
    "lib/interfaces/docker/",
    "lib/interfaces/serverless/aws/",
]

# Import discovery
namespace_packages = true
explicit_package_bases = true

# Platform configuration  
platform = "linux"

# Strictness and error reporting
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true

# Untyped definitions
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# Optional handling
no_implicit_optional = true
strict_optional = true

# Miscellaneous
show_error_codes = true
show_column_numbers = true
show_error_context = true
color_output = true
error_summary = true
pretty = true

# Cache
sqlite_cache = true
cache_dir = ".mypy_cache"

# Per-module options for tests (using proper module patterns)
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "test.*",
]
# Relax some rules for tests
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
    "gunicorn.*",
    "jwt.*",
    "yaml.*",
    "dotenv.*",
    "weasyprint.*",
    "pandas.*",
    "networkx.*", 
    "numpy.*",
    "scipy.*",
]
# Ignore missing imports for third-party libraries without stubs
ignore_missing_imports = true

# Bandit configuration
[tool.bandit]

# Test IDs to skip
skips = [
    "B404",  # Consider possible security implications of subprocess (if needed)
    "B603",  # subprocess without shell equals True (if using subprocess safely)
    "B108",  # hardcoded_tmp_directory - safe in container context
]

# Target directories - explicitly specify where to look
targets = ["."]

# Exclude paths
exclude_dirs = [
    "/.venv/",
    "/venv/",
    "/build/",
    "/dist/",
    "/.git/",
    "__pycache__",
    "/data/",
    "/licenser/",
]

# Severity level (LOW, MEDIUM, HIGH)
severity = "MEDIUM"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.8",
]
